--- a/backened/package.json
+++ b/backened/package.json
@@ -9,7 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@google-cloud/vision": "^5.1.0",
     "axios": "^1.8.4",
@@ -22,5 +21,7 @@
     "multer": "^1.4.5-lts.2",
     "ngrok": "^5.0.0-beta.2",
     "tesseract.js": "^6.0.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
